--- a/index.html
+++ b/index.html
@@ -4,6 +4,80 @@
     <title>Lists Lab</title>
   </head>
   <body>
-    <!-- Write your HTML in this file -->
+    <!--listing using p tag  -->
+
+      <p>Banh Mi</p>
+      <p>Grilled Cheese</p>
+      <p>Baba Ghanoush</p>
+      <p>Tomato soup</p>
+      <p>Cheese and crackers</p>
+      <p>Sushi</p>
+
+    <!--listing using p tag  -->
+ <ul>
+       <li>Banh Mi</li>
+        <li>Grilled Cheese</li>
+        <li>Baba Ghanoush</li>
+        <li>Tomato soup</li>
+        <li>Za’atar Bread</li>
+       <li>Sushi</li>
+</ul>
+
+    <!--listing using nested lists -->
+    <ul>
+      <li>
+        Sandwiches
+        <ul>
+          <li>Banh Mi</li>
+          <li>Grilled Cheese</li>
+        </ul>
+      </li>
+      <li>
+        Snacks
+        <ul>
+          <li>Baba Ghanoush</li>
+          <li>Za’atar Bread</li>
+        </ul>
+      </li>
+      <li>
+        Soups
+        <ul>
+          <li>Tomato soup</li>
+        </ul>
+      </li>
+      <li>
+        Sushi
+        <ul>
+          <li>Sashimi</li>
+          <li>Uramaki</li>
+        </ul>
+      </li>
+    </ul>
+            <!--assigment create unordered list -->
+
+    
+            <ul>
+              <li>
+                2 slice of braed
+                <br>
+                <li>4 slice of Cheese</li>
+                <ul>
+                  <li>cheddar</li>
+                  <li>mozzarella</li>
+                  <li>pepper jack</li>
+                </ul>
+                <li>1 tbsp of butter</li>
+            </ul>
+
+            <!--assigment create unordered list -->
+            <ol>
+              <li>Spread butter on bread and frying pan</li>
+              <li>Place bread in frying pan </li>
+              <li>Add Cheese on top of bread</li>
+              <li>Cover with second slice of bread</li>
+              <li>Turn over and fry for 2 minutes</li>
+            </ol>
+
+
   </body>
 </html>
